--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,15 @@
         <div id="editor" class="h-1/2"></div>
         <div id="drag-bar" class="bg-gray-300 dark:bg-gray-700"></div>
         <div class="w-full h-1/2">
-          <div class="w-full bg-gray-100 p-3 flex justify-between dark:bg-gray-800">
+          <div class="w-full bg-gray-100 p-3 flex items-center gap-2 dark:bg-gray-800">
+            <div class="text-sm text-gray-700">
+              Authorize:
+            </div>
+            <input
+              id="authorizeQuery"
+              type="text"
+              value='User{"alice"} "read" Organization{"acme"})'
+              class="border flex-grow border-gray-300 rounded-md px-3 py-2 dark:bg-gray-700 dark:border-gray-600 dark:text-white font-mono" placeholder="Enter text...">
             <button id="runButton" onclick="runCode()" class="bg-indigo-600 hover:bg-indigo-500 text-white px-4 py-2 rounded-md disabled:bg-slate-500 dark:bg-indigo-800 dark:hover:bg-indigo-700">Run</button>
           </div>
           <pre id="results" class="p-4 h-[calc(100%-64px)] overflow-y-auto relative dark:text-gray-300">
@@ -194,6 +202,7 @@ async function runCode() {
   const runButton = document.getElementById('runButton');
   runButton.disabled = true;
   const code = cm.getValue();
+  const authorizeQuery = document.getElementById('authorizeQuery').value;
   const results = document.getElementById('results');
   let success = null;
   let error = null;
@@ -204,7 +213,7 @@ async function runCode() {
       headers: {
         'Content-Type': 'application/json'
       },
-      body: JSON.stringify({ code })
+      body: JSON.stringify({ code, authorizeQuery })
     });
     const result = await response.json();
     let displayResult = '';
@@ -223,15 +232,25 @@ async function runCode() {
     } else {
       displayResult += `
         <div class="flex flex-col items-center">
-          <div>Policy executed successfully</div>
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-green-500 mt-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-          </svg>
+          <div>Result: ${result.authorizeResult ? 'Allowed' : 'Denied'}</div>
+          ${result.authorizeResult ?
+            `<svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-green-500 mt-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+            </svg>` :
+            `<svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-red-500 mt-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+            </svg>`
+          }
         </div>
       `;
       results.classList.add('border-2');
-      results.classList.remove('border-red-500');
-      results.classList.add('border-green-500');
+      if (result.authorizeResult) {
+        results.classList.remove('border-red-500');
+        results.classList.add('border-green-500');
+      } else {
+        results.classList.remove('border-green-500');
+        results.classList.add('border-red-500');
+      }
       success = true;
     }
     displayResult += '</div>';
