--- a/public/index.html
+++ b/public/index.html
@@ -111,22 +111,22 @@
       </div>
       <div id="drag-bar-vert" class="bg-gray-300 dark:bg-gray-700"></div>
       <div class="w-1/2 flex flex-col h-[calc(100vh-48px)] overflow-hidden">
-        <div id="editorWrapper" class="h-1/2 flex relative">
+        <div id="editorWrapper" class="h-1/2 flex relative bg-[#f7f7f7] dark:bg-[#272822]">
           <div class="absolute left-2 top-1 font-bold">Policy</div>
           <div id="editor" class="h-full w-1/2 border-r border-gray-700 pt-8"></div>
-          <div id="facts" class="h-full w-1/2 flex flex-col p-2">
-            <h2 class="font-bold">Facts</h2>
-            <div class="flex gap-2 mt-2">
+          <div id="facts" class="h-full w-1/2 flex flex-col bg-white dark:bg-gray-900">
+            <h2 class="font-bold bg-[#f7f7f7] dark:bg-[#272822] h-8 px-2 pt-1">Facts</h2>
+            <div class="flex gap-2 mt-2 px-2">
               <input id="factInput" type="text" class="flex-grow border border-gray-300 rounded px-2 py-1 dark:bg-gray-700 dark:border-gray-600 dark:text-white" placeholder="Enter fact">
               <button onclick="addFact()" class="bg-indigo-600 text-white px-3 py-1 rounded hover:bg-indigo-500 dark:bg-indigo-800 dark:hover:bg-indigo-700">Add</button>
             </div>
-            <div id="factList" class="mt-4 flex flex-col gap-2"></div>
+            <div id="factList" class="mt-4 flex flex-col gap-2 px-2"></div>
           </div>
         </div>
         <div id="drag-bar" class="bg-gray-300 dark:bg-gray-700"></div>
         <div class="w-full h-1/2">
           <div class="w-full bg-gray-100 p-3 flex items-center gap-2 dark:bg-gray-800">
-            <div class="text-sm text-gray-700">
+            <div class="text-sm text-gray-700 dark:text-gray-400">
               Authorize:
             </div>
             <input
