improve intro page based on feedback and better dark mode colors for Policy/Facts

--- a/public/index.html
+++ b/public/index.html
@@ -116,12 +116,12 @@
       </div>
       <div id="drag-bar-vert" class="bg-gray-300 dark:bg-gray-700"></div>
       <div class="w-1/2 flex flex-col h-[calc(100vh-48px)] overflow-hidden">
-        <div id="editorWrapper" class="h-1/2 flex relative bg-[#f7f7f7] dark:bg-[#272822]">
+        <div id="editorWrapper" class="h-1/2 flex relative bg-[#f7f7f7] dark:bg-gray-800">
           <div class="absolute left-2 top-1 font-bold">Policy</div>
           <div id="editor" class="h-full w-1/2 pt-8"></div>
           <div id="drag-bar-policy" class="bg-gray-300 dark:bg-gray-700"></div>
           <div id="facts" class="h-full w-1/2 flex flex-col bg-white dark:bg-gray-900">
-            <h2 class="font-bold bg-[#f7f7f7] dark:bg-[#272822] h-8 px-2 pt-1">Facts</h2>
+            <h2 class="font-bold bg-[#f7f7f7] dark:bg-gray-800 h-8 px-2 pt-1">Facts</h2>
             <div class="flex gap-2 mt-2 px-2">
               <input id="factInput" type="text" class="flex-grow border border-gray-300 rounded px-2 py-1 dark:bg-gray-700 dark:border-gray-600 dark:text-white" placeholder="Enter fact">
               <button onclick="addFact()" class="bg-indigo-600 text-white px-3 py-1 rounded hover:bg-indigo-500 dark:bg-indigo-800 dark:hover:bg-indigo-700">Add</button>
